# EmbAlign

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
notebooks/: 01_test_models.ipynb
notebooks/refactor_testing/: embryo_diagnostics_test.html  embryo_diagnostics_test_v2.html  run_inference.py
notebooks/refactor_testing/production_models/: empirical_growth_curve.csv  master_gp_atlas.pkl  master_slice_db.pkl
notebooks_final/: alignment_report.html  batch_inference.py  fig1.ipynb  fit_atlas_and_oracle.ipynb  full_embalign_cv_run.ipynb  inference_walkthrough.ipynb  oos_validation.ipynb
notebooks_final/data/: aligned_frame_results_cv.csv  alignment_report.html  oos_aligned_cell_results.csv  oos_aligned_frame_results.csv  oos_registered_pts.csv
notebooks_final/production_models/: master_life_history.pkl
src/aligner/: __init__.py  atlas.py  benchmarking.py  config.py  engine.py  inventory.py  matcher.py  models.py  oracle.py  plot_utils.py  report_builder.py  runner.py  transformer.py
src/aligner.egg-info/: PKG-INFO  SOURCES.txt
