[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aligner"
version = "0.1.0"
description = "Legacy and Probabilistic 3D Embryo Alignment"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "plotly"
]

[tool.setuptools.packages.find]
where = ["src"]
